--- a/site-desordem/segunda_pagina.html
+++ b/site-desordem/segunda_pagina.html
@@ -1,12 +1,67 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="estilo2.css"/>
-       
+
+<head>
+    <link rel="stylesheet" href="estilo2.css" />
+
     <title>SANDOCRIAS</title>
-<meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
 </head>
+
 <body>
-  <h1>SANDOCRIAS</h1>
-    <a href="./index.html">voltar</a>
+    <h1>SANDOCRIAS</h1>
+    <div class="tudo">
+        <div class="canto"><a href="./index.html">voltar</a></div>
+        <div class="centro">
+            <h2>
+                <ul class="peit">
+                    <li>PEITO</li>
+                    <li>supino reto</li>
+                    <li>fly</li>
+                    <li>supino inclinado</li>
+                    <li>crossover</li>
+                    <li>supino declinado</li>
+
+                </ul>
+            </h2>
+            <h2>
+                <ul class=" cost">
+                    <li>
+                        COSTAS
+                    </li>
+                    <li>
+                        puxada alta
+                    </li>
+                    <li>remada baixa</li>
+                    <li>remada curvada</li>
+                    <li>cavalinho da morte</li>
+                </ul>
+            </h2>
+            <h2>
+                <ul class=" brac">
+                    <li>BRAÇO</li>
+                    <li>
+                        triceps polia
+                    </li>
+                    <li>francês no halter</li>
+                    <li>testa na polia </li>
+                    <li>rosca direta</li>
+                    <li>rosca scott</li>
+                    <li>rosca inversa</li>
+                </ul>
+            </h2>
+            <h2><ul class="brac"> 
+                <li>OMBRO</li>
+                <li>desenvolvimento</li>
+                <li>elevação lateral</li>
+                <li>elevação frontal</li>
+                <li>crucifixo inverso</li>
+            </ul></h2>
+        </div>
+        <div class="canto"><a href="https://images.app.goo.gl/PfjyVaiYctrqMCny9"> Perna</a></div>
+
+
+    </div>
+
 </body>
+
 </html>
